--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <img src="/imm.jpg" alt="" />
+        <img src="/imm.jpg" alt="image" />
         <h3>The perfect workspace</h3>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="/imm.jpg" alt="" />
+      <img src="/imm.jpg" alt="image" />
       <h3>The perfect workspace</h3>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="/imm.jpg" alt="" />
+    <img src="/imm.jpg" alt="image" />
     <h3>The perfect workspace</h3>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto
